<resources>
    <string name="whatsapp_showword">WhatsApp</string>
    <string name="whatsapp_no_client">未安装有WhatsApp客户端</string>
    <string name="whatsapp_content">有道云笔记只支持文本，图片</string>
    <string name="whatsapp_no_content">请设置分享内容</string>
    <string name="line_showword">LINE</string>
    <string name="line_no_client">未安装Line客户端</string>
    <string name="line_content">Line只支持文本，图片</string>
    <string name="line_no_content">请设置分享内容</string>
    <string name="str_zhuge_play_video_event">播放极社视频</string>
    <string name="str_zhuge_play_video_id">视频ID</string>
    <string name="str_zhuge_play_video_desc">是否有人工描述</string>
    <string name="str_zhuge_play_video_action">参加活动名称</string>
    <string name="str_zhuge_play_video_type">类型</string>
    <string name="str_zhuge_play_video_page">播放页面</string>
    <string name="str_zhuge_yes">是</string>
    <string name="str_zhuge_no">否</string>
    <string name="str_zhuge_have">有</string>
    <string name="str_zhuge_have_not">无</string>
    <string name="str_zhge_play_video_no_participate">未参加</string>
    <string name="str_zhuge_video_type_bgt">曝光台</string>
    <string name="str_zhuge_video_type_sgbl">事故爆料</string>
    <string name="str_zhuge_video_type_mlfj">美丽风景</string>
    <string name="str_zhuge_video_type_ssp">随手拍</string>
    <string name="str_zhuge_play_video_page_newest">最新页</string>
    <string name="str_zhuge_play_video_page_category">四大分类页</string>
    <string name="str_zhuge_play_video_page_followed">我的关注内容列表</string>
    <string name="str_zhuge_play_video_page_cluster">活动聚合页</string>
    <string name="str_zhuge_play_video_page_videodetail">视频详情页</string>
    <string name="str_zhuge_play_video_default_desc1">啥也不想说，快看视频吧</string>
    <string name="str_zhuge_play_video_default_desc2">啥也不想说，快看视频吧...</string>
    <string name="str_zhuge_call_album_event">相册页面访问</string>
    <string name="str_zhuge_call_album_source">访问来源</string>
    <string name="str_zhuge_call_album_connect_ipc_state">IPC连接状态</string>
    <string name="str_zhuge_call_album_source_ipc">IPC</string>
    <string name="str_zhuge_call_album_source_tabbar">Tabbar</string>
    <string name="str_zhuge_call_album_source_cluster">活动聚合页</string>
    <string name="str_zhuge_call_album_source_profit">我的收益</string>
    <string name="str_zhuge_call_album_connect_ipc_state_true">已连接</string>
    <string name="str_zhuge_call_album_connect_ipc_state_false">未连接</string>
    <string name="str_zhuge_share_event">即刻分享页面访问</string>
    <string name="str_zhuge_share_video_edit">视频后处理</string>
    <string name="str_zhuge_share_video_player">竖屏播放页</string>
    <string name="str_zhuge_video_edit_event">视频后处理页面访问</string>
    <string name="str_zhuge_ipc_event">IPC页面访问</string>
    <string name="str_zhuge_ipc_carrecorder">记录仪</string>
    <string name="str_zhuge_ipc_carrecorder_connecting">记录仪-连接中</string>
    <string name="str_zhuge_ipc_album">相册</string>
    <string name="str_zhuge_ipc_album_connecting">相册-连接中</string>
    <string name="str_zhuge_album_player_event">相册竖屏播放页面访问</string>
    <string name="str_zhuge_album_player_tag">相册标签</string>
    <string name="str_zhuge_album_player_type">类型</string>
    <string name="str_zhuge_video_player_local">本地</string>
    <string name="str_zhuge_video_player_wonderful">精彩</string>
    <string name="str_zhuge_video_player_urgent">紧急</string>
    <string name="str_zhuge_video_player_recycle">循环</string>
    <string name="str_zhuge_video_player_ipc">IPC</string>
    <string name="str_zhuge_after_effect_event">导出后处理视频</string>
    <string name="str_zhuge_after_effect_video_duration">视频时长</string>
    <string name="str_zhuge_after_effect_music_type">音乐类型</string>
    <string name="str_zhuge_after_effect_resolution">导出分辨率</string>
    <string name="str_zhuge_after_effect_video_duration1">10~13s</string>
    <string name="str_zhuge_after_effect_video_duration2">14~30s</string>
    <string name="str_zhuge_after_effect_video_duration3">30~60s</string>
    <string name="str_zhuge_after_effect_video_duration4">60s~90s</string>
    <string name="str_zhuge_after_effect_music_wave">潮玩</string>
    <string name="str_zhuge_after_effect_music_discover">发现</string>
    <string name="str_zhuge_after_effect_music_humor">幽默</string>
    <string name="str_zhuge_after_effect_music_memory">回忆</string>
    <string name="str_zhuge_after_effect_music_crowd">街头</string>
    <string name="str_zhuge_after_effect_music_travel">旅行</string>
    <string name="str_zhuge_after_effect_music_fresh">新鲜</string>
    <string name="str_zhuge_after_effect_music_wild">撒野</string>
    <string name="str_zhuge_after_effect_resolution480">480p</string>
    <string name="str_zhuge_after_effect_resolution720">720p</string>
    <string name="str_zhuge_after_effect_resolution1080">1080p</string>
    <string name="str_zhuge_after_effect_export_fail_event">导出编辑视频失败</string>
    <string name="str_zhuge_after_effect_export_fail_manufacturer">厂商</string>
    <string name="str_zhuge_after_effect_export_fail_device">机型</string>
    <string name="str_zhuge_after_effect_export_fail_os_version">系统版本</string>
    <string name="str_zhuge_upload_sharevideo_event">上传分享视频</string>
    <string name="str_zhuge_share_video_type">视频类型</string>
    <string name="str_zhuge_share_video_quality">分享视频质量</string>
    <string name="str_zhuge_share_video_network">分享视频网络环境</string>
    <string name="str_zhuge_share_video_connect_ipc">分享时是否链接记录仪</string>
    <string name="str_zhuge_share_video_length">视频时长范围</string>
    <string name="str_zhuge_share_video_desc">是否有人工描述</string>
    <string name="str_zhuge_share_video_channel">分享渠道</string>
    <string name="str_zhuge_share_video_action">参加活动</string>
    <string name="str_zhuge_share_video_state">上传状态</string>
    <string name="str_zhuge_share_video_network_wifi">WIFI</string>
    <string name="str_zhuge_share_video_network_4g">4G</string>
    <string name="str_zhuge_share_video_network_3g">3G</string>
    <string name="str_zhuge_share_video_network_other">其它</string>
    <string name="str_zhuge_share_video_channel_weixin_friends">朋友圈</string>
    <string name="str_zhuge_share_video_channel_weixin">微信好友</string>
    <string name="str_zhuge_share_video_channel_sina">微博</string>
    <string name="str_zhuge_share_video_channel_qq">QQ好友</string>
    <string name="str_zhuge_share_video_channel_qq_space">QQ空间</string>
    <string name="str_zhuge_share_video_channel_facebook">Facebook</string>
    <string name="str_zhuge_share_video_channel_twitter">Twitter</string>
    <string name="str_zhuge_share_video_channel_instagram">Instagram</string>
    <string name="str_zhuge_share_video_channel_whatsapp">Whatsapp</string>
    <string name="str_zhuge_share_video_channel_line">Line</string>
    <string name="str_zhuge_share_video_channel_copy">拷贝链接</string>
    <string name="str_zhuge_share_video_state_success">成功</string>
    <string name="str_zhuge_start_live_event">IPC发起直播</string>
    <string name="str_zhuge_live_time">时长</string>
    <string name="str_zhuge_live_state">发起状态</string>
    <string name="str_zhuge_live_voice">直播声音</string>
    <string name="str_zhuge_live_time1">60分以下</string>
    <string name="str_zhuge_live_time2">60-120分钟</string>
    <string name="str_zhuge_live_time3">120分钟以上</string>
    <string name="str_zhuge_live_voice_open">开启</string>
    <string name="str_zhuge_live_voice_close">关闭</string>
    <string name="str_zhuge_close_live_event">关闭直播</string>
    <string name="str_zhuge_close_live_type">关闭类型</string>
    <string name="str_zhuge_close_live_time">已直播时间</string>
    <string name="str_zhuge_close_live_timeup">时间到</string>
    <string name="str_zhuge_close_live_hand">人为关闭</string>
    <string name="str_zhuge_close_live_time1">0-5分钟</string>
    <string name="str_zhuge_close_live_time2">5-10分钟</string>
    <string name="str_zhuge_close_live_time3">10-30分钟</string>
    <string name="str_zhuge_close_live_time4">30-60分钟</string>
    <string name="str_zhuge_close_live_time5">60-120分钟</string>
    <string name="str_zhuge_close_live_time6">120分钟以上</string>
    <string name="str_zhuge_followed_event">关注用户</string>
    <string name="str_zhuge_followed_from">关注来源</string>
    <string name="str_zhuge_followed_from_list">关注人列表</string>
    <string name="str_zhuge_followed_from_other_fans_list">别人的粉丝列表</string>
    <string name="str_zhuge_followed_from_my_fans_list">自己的粉丝列表</string>
    <string name="str_zhuge_followed_from_usercenter">个人主页</string>
    <string name="str_zhuge_followed_from_search_list">搜索数据列表</string>
    <string name="str_zhuge_followed_from_followed_recommed">关注页推荐</string>
    <string name="str_zhuge_followed_from_search_recommed">搜索页推荐</string>
    <string name="str_zhuge_user_id">用户ID</string>
    <string name="str_zhuge_user_nickname">用户昵称</string>
    <string name="str_zhuge_user_login_style">登陆方式</string>
    <string name="str_zhuge_user_desc">是否默认个性签名</string>
    <string name="str_zhuge_user_type">用户类型</string>
    <string name="str_zhuge_user_sharevideo_number">上传视频数</string>
    <string name="str_zhuge_user_followed_number">关注好友数</string>
    <string name="str_zhuge_user_fans_number">粉丝数</string>
    <string name="unbind_select_title_txt">Dashcam</string>
    <string name="edit_text">Edit</string>
    <string name="wifi_link_17_text">Confirm that the Wi-Fi indicator light is flashing(Solid on T2)</string>
    <string name="wifi_link_17_2_text">Click button then go to settings to connect</string>
    <string name="wifi_link_33_text">FAQ</string>
    <string name="wifi_link_28_text">Done</string>
    <string name="unbind_add_mobile_btn">Add new Dashcam</string>
    <string name="unbind_nodata_txt">You are not connected to any device yet.</string>
    <string name="unbind_nodata_add_txt">Please add</string>
    <string name="str_ae_export_dialog_title">Choose export size</string>
    <string name="next_text">Next</string>
    <string name="str_ae_export_dialog_cancel">Cancel</string>
    <string name="str_ae_export_dialog_480p">Middle 480P</string>
    <string name="str_ae_export_dialog_720p">HD720P</string>
    <string name="str_ae_export_dialog_1080p">FULL HD 1080P</string>
    <string name="wifi_link_37_text">Connected successfully Goluk3213</string>
    <string name="imgdes">Image description</string>
    <string name="wifi_link_36_text">Wi-Fi named GolukXXXX</string>
    <string name="def">default</string>
    <string name="choose_ipc_device">Select device：</string>
    <string name="goluk_wifi_connection">Goluk Wi-Fi connection</string>
    <string name="goluk_cannot_connect_hotspot">Goluk failed to connect to phone hotspot.</string>
    <string name="reconnect_hotspot">Reconnect mobile hotspot</string>
    <string name="goluk_only_wifi">Direct connect to Goluk Wi-Fi</string>
    <string name="connect_only_wifi_desc">Only connected to dashcam by wi-ifi. When connected, the livestream function and mobile data network cannot be used.</string>
    <string name="privacy_title">Reminder</string>
    <string name="pls_read">Please read it first</string>
    <string name="user_rule">User agreement</string>
    <string name="privacy_name">Privacy policy</string>
    <string name="and">and</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="user_data_content">
        1. In order to provide you with video publishing service, we may have access to mobile phone storage and network;\n
        2. In order to recommend content to you based on your location, we may apply for your location permission;\n
        3. For information push and account security, we will apply for system device permission, mobile phone device information and log information;\n
        4. In order to login quickly, we may log in to get your personal information through social app;\n
        5. We will strive to take various security technologies to protect your personal information. Without your consent, we will not obtain, share or provide your information from three parties.
    </string>
</resources>