<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/privacy_title"
        android:textColor="#000000"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_data_content"
            android:textColor="#3C3C3C"
            android:textSize="14sp" />

    </ScrollView>

    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/pls_read"
        android:textColor="#3C3C3C"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/user_rule"
            android:textColor="#22D5C9"
            android:textSize="14sp" />

        <TextView
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/and"
            android:textColor="#3C3C3C"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/privacy_name"
            android:textColor="#22D5C9"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/btn_agree"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/bg_green_round_corner"
        android:gravity="center"
        android:text="@string/agree"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/btn_disagree"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/disagree"
        android:textColor="@color/font_text"
        android:textSize="18sp" />


</LinearLayout>
