<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f9fa"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/close_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/def"
        android:src="@drawable/connect_close_icon" />

    <TextView
        android:id="@+id/connect_title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/unbind_select_title_txt"
        android:textColor="#565656"
        android:textSize="16sp" />

    <Button
        android:id="@+id/edit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="12dp"
        android:background="#00000000"
        android:text="@string/edit_text"
        android:textColor="#047cf3"
        android:textSize="14sp" />

    <Button
        android:id="@+id/addMoblieBtn"
        android:layout_width="312dp"
        android:layout_height="42dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ipcbind_btn_able"
        android:text="@string/unbind_add_mobile_btn"
        android:textColor="#047cf3"
        android:textSize="16sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/addMoblieBtn"
        android:layout_below="@id/edit_btn"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_choose_goluk_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_ipc_device"
                android:visibility="gone" />

            <ListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="#f7f9fa"
                android:dividerHeight="0.5dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_connect_my_goluk"
                android:layout_width="312dp"
                android:layout_height="42dp"
                android:layout_centerInParent="true"
                android:background="@drawable/ipcbind_btn_able"
                android:textColor="#047cf3"
                android:textSize="16sp" />
        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/emptyLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <ImageView
            android:id="@+id/emptyImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/def"
            android:src="@drawable/noipc_img" />

        <TextView
            android:id="@+id/nodata_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/emptyImage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="38dp"
            android:text="@string/unbind_nodata_txt"
            android:textColor="#565656"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/nodata_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nodata_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:text="@string/unbind_nodata_add_txt"
            android:textColor="#565656"
            android:textSize="16sp" />
    </RelativeLayout>

</RelativeLayout>